--- a/style.css
+++ b/style.css
@@ -79,3 +79,96 @@ footer {
     font-size: 80%;
     font-style: italic;
 }
+@media only screen and (max-width: 64em) {
+    img {
+        max-width: 100%;
+    }
+    #wrapper {
+        min-width: 0;
+        width: auto;
+        box-shadow: none;
+        background: #90C7E3;
+    }
+    main {
+        margin-left: 0;
+    }
+    figure {
+        display: none;
+    }
+    nav {
+        float: none;
+        width: auto;
+        text-align: center;
+    }
+    nav li {
+        float: none;
+        width: auto;
+        text-align: center;
+        padding: 0.5em;
+        display: inline;
+    }
+    ul {
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
+        padding-left: 6em;
+        padding-right: 0.75em;
+    }
+    #homehero {
+        margin: 0;
+        height: 200px;
+    }
+    #yurthero {
+        margin: 0;
+        height: 200px;
+    }
+    #trailhero {
+        margin: 0;
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 37.5em) {
+    header {
+        padding-top: 1em;
+    }
+    figure {
+        display: none;
+    }
+    main {
+        padding-top: 0.1em;
+        padding-bottom: 0.1em;
+        padding-left: 1em;
+        padding-right: 1em;
+        font-size: 90%;
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+    figure {
+        display: none;
+    }
+    h1,
+    h2 {
+        font-size: 100%;
+    }
+    span {
+        font-size: 80%;
+    }
+    nav,
+    nav ul,
+    nav li {
+        padding: 0;
+    }
+    nav li {
+        display: block;
+    }
+    nav a {
+        display: block;
+        padding: 0.5em 0;
+        border-bottom: 2px ridge #330000;
+    }
+    nav li {
+        display: block;
+    }
+}
